TaskGenerator-master/src/antlr4/dependency/rules/basic/LogarithmicParser.java
// Generated from Logarithmic.g4 by ANTLR 4.4

package dependency.rules.basic;
import java.util.*;
import complexity.*;
import org.javatuples.Pair;
import unification.*;
import org.apache.commons.lang3.math.NumberUtils;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LogarithmicParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, EXPR=2, LPAREN=3, RPAREN=4, COMMA=5, WHILE=6, IDENT=7;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "'expr'", "'('", "')'", "','", "'while'", "IDENT"
	};
	public static final int
		RULE_formula = 0, RULE_segmentSequence = 1, RULE_segment = 2, RULE_expression = 3, 
		RULE_leftSide = 4, RULE_rightSide = 5, RULE_argList = 6, RULE_arg = 7, 
		RULE_whileSegment = 8, RULE_leftVar = 9, RULE_rightVar = 10, RULE_exprSequence = 11, 
		RULE_variable = 12;
	public static final String[] ruleNames = {
		"formula", "segmentSequence", "segment", "expression", "leftSide", "rightSide", 
		"argList", "arg", "whileSegment", "leftVar", "rightVar", "exprSequence", 
		"variable"
	};

	@Override
	public String getGrammarFileName() { return "Logarithmic.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    
	    private List<Pair<String,String>> solution = new ArrayList<>();
	    private Map<String, Double> logBaseMap = new HashMap<>();
	    
	    public void unifyRightSide(String funcName, Pair<String,String> expr,
	        String constName, StringBuilder formulas, Unification unif) throws UnifyException{
	        formulas.delete(0, formulas.length());
	        formulas.append(funcName+"("+expr.getValue0()+","+constName+")");
	        formulas.append(expr.getValue1());
	        Set<String>variables = new HashSet<>();
	        variables.add(expr.getValue0());
	        variables.add(constName);
	        unif.startUnification(formulas.toString(), variables);
	    }
	    public void parseSolution(List<String> solution1){
	        //solution in form {formalVal}=actualVal
	        solution = new ArrayList<>();
	        for(int i = 0;i<solution1.size();i++){
	            String s = solution1.get(i);
	            String formal = s.substring(s.indexOf("{")+1, s.lastIndexOf("}"));
	            String actual = s.substring(s.indexOf("=")+1, s.lastIndexOf(";"));
	            if(actual.equals(""))actual = formal;
	            Pair<String,String> sol = new Pair<>(formal, actual);
	            solution.add(sol);
	        }

	    }

	    public boolean validateLeftVar(String leftVarName, Unification unif){
	        parseSolution(unif.getSolution());
	        for(Pair<String,String> sol : solution){
	            if(sol.getValue1().equals(leftVarName)){
	                return true;
	            }
	        }
	        return false;
	    }

	    public boolean validateConst(String constName, Unification unif){
	        parseSolution(unif.getSolution());
	        for(Pair<String,String> sol : solution){
	            if(sol.getValue0().equals(constName) && 
	                NumberUtils.isCreatable(sol.getValue1())){
	                try{
	                    Double d = Double.parseDouble(sol.getValue1());
	                    if(d>0) return true;
	                    return false;
	                }catch(NumberFormatException ex){
	                    return false;
	                }
	            }
	        }
	        return false;
	    }
	    
	    public boolean validateLogBase(String logBaseName, Unification unif){
	        parseSolution(unif.getSolution());
	        for(Pair<String,String> sol : solution){
	            if(sol.getValue0().equals(logBaseName) && 
	                NumberUtils.isCreatable(sol.getValue1())){
	                try{
	                    Double d = Double.parseDouble(sol.getValue1());
	                    logBaseMap.put(logBaseName, d);
	                    if(d>1) return true;
	                    return false;
	                }catch(NumberFormatException ex){
	                    return false;
	                }
	            }
	        }
	        return false;
	    }

	    public boolean validateLogBases(boolean gte){
	        try{
	            if(gte)
	                return (logBaseMap.get("k") > logBaseMap.get("k1"));
	            return (logBaseMap.get("k") > logBaseMap.get("k1"));
	        }catch(Exception ex){
	            return false;
	        }
	    }

	    

	public LogarithmicParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FormulaContext extends ParserRuleContext {
		public Complexity resultComplexity;
		public SegmentSequenceContext s;
		public SegmentSequenceContext segmentSequence() {
			return getRuleContext(SegmentSequenceContext.class,0);
		}
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).enterFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).exitFormula(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{

			        //System.out.println("Starting logarithmic rule");
			    
			setState(27); ((FormulaContext)_localctx).s = segmentSequence();

			        if(((FormulaContext)_localctx).s.valid == true){
			            ((FormulaContext)_localctx).resultComplexity =  Complexity.createLog("n");
			        }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SegmentSequenceContext extends ParserRuleContext {
		public boolean valid;
		public SegmentContext s1;
		public SegmentContext s2;
		public SegmentContext segment(int i) {
			return getRuleContext(SegmentContext.class,i);
		}
		public List<SegmentContext> segment() {
			return getRuleContexts(SegmentContext.class);
		}
		public SegmentSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segmentSequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).enterSegmentSequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).exitSegmentSequence(this);
		}
	}

	public final SegmentSequenceContext segmentSequence() throws RecognitionException {
		SegmentSequenceContext _localctx = new SegmentSequenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_segmentSequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((SegmentSequenceContext)_localctx).valid =  true;
			setState(31); ((SegmentSequenceContext)_localctx).s1 = segment();
			 if(!(((SegmentSequenceContext)_localctx).s1.valid)) ((SegmentSequenceContext)_localctx).valid = false; 
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EXPR || _la==WHILE) {
				{
				{
				setState(33); ((SegmentSequenceContext)_localctx).s2 = segment();
				 if(!(((SegmentSequenceContext)_localctx).s2.valid)) ((SegmentSequenceContext)_localctx).valid = false; 
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SegmentContext extends ParserRuleContext {
		public boolean valid;
		public WhileSegmentContext w;
		public ExpressionContext e;
		public WhileSegmentContext whileSegment() {
			return getRuleContext(WhileSegmentContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).enterSegment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).exitSegment(this);
		}
	}

	public final SegmentContext segment() throws RecognitionException {
		SegmentContext _localctx = new SegmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_segment);
		try {
			setState(47);
			switch (_input.LA(1)) {
			case WHILE:
				enterOuterAlt(_localctx, 1);
				{
				setState(41); ((SegmentContext)_localctx).w = whileSegment();

				        ((SegmentContext)_localctx).valid =  ((SegmentContext)_localctx).w.valid;
				    
				}
				break;
			case EXPR:
				enterOuterAlt(_localctx, 2);
				{
				setState(44); ((SegmentContext)_localctx).e = expression();

				        ((SegmentContext)_localctx).valid =  true;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public String ls;
		public String rs;
		public LeftSideContext ls1;
		public RightSideContext rs1;
		public TerminalNode LPAREN() { return getToken(LogarithmicParser.LPAREN, 0); }
		public TerminalNode COMMA() { return getToken(LogarithmicParser.COMMA, 0); }
		public RightSideContext rightSide() {
			return getRuleContext(RightSideContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LogarithmicParser.RPAREN, 0); }
		public TerminalNode EXPR() { return getToken(LogarithmicParser.EXPR, 0); }
		public LeftSideContext leftSide() {
			return getRuleContext(LeftSideContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); match(EXPR);
			setState(50); match(LPAREN);
			setState(51); ((ExpressionContext)_localctx).ls1 = leftSide();
			((ExpressionContext)_localctx).ls =  (((ExpressionContext)_localctx).ls1!=null?_input.getText(((ExpressionContext)_localctx).ls1.start,((ExpressionContext)_localctx).ls1.stop):null);
			setState(53); match(COMMA);
			setState(54); ((ExpressionContext)_localctx).rs1 = rightSide();

			        ((ExpressionContext)_localctx).rs =  (((ExpressionContext)_localctx).rs1!=null?_input.getText(((ExpressionContext)_localctx).rs1.start,((ExpressionContext)_localctx).rs1.stop):null);
			    
			setState(56); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeftSideContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public LeftSideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leftSide; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).enterLeftSide(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).exitLeftSide(this);
		}
	}

	public final LeftSideContext leftSide() throws RecognitionException {
		LeftSideContext _localctx = new LeftSideContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_leftSide);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); variable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RightSideContext extends ParserRuleContext {
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(LogarithmicParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(LogarithmicParser.RPAREN, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public RightSideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rightSide; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).enterRightSide(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).exitRightSide(this);
		}
	}

	public final RightSideContext rightSide() throws RecognitionException {
		RightSideContext _localctx = new RightSideContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rightSide);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); variable();
			setState(65);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(61); match(LPAREN);
				setState(62); argList();
				setState(63); match(RPAREN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgListContext extends ParserRuleContext {
		public ArgContext a;
		public ArgContext a1;
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LogarithmicParser.COMMA); }
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(LogarithmicParser.COMMA, i);
		}
		public ArgListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).enterArgList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).exitArgList(this);
		}
	}

	public final ArgListContext argList() throws RecognitionException {
		ArgListContext _localctx = new ArgListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); ((ArgListContext)_localctx).a = arg();
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(68); match(COMMA);
				setState(69); ((ArgListContext)_localctx).a1 = arg();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public RightSideContext rs;
		public RightSideContext rightSide() {
			return getRuleContext(RightSideContext.class,0);
		}
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).exitArg(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_arg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); ((ArgContext)_localctx).rs = rightSide();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileSegmentContext extends ParserRuleContext {
		public boolean valid;
		public int numA;
		public int numB;
		public int i;
		public Pair<String,String> expr;
		public String f1;
		public String f2;
		public Unification unif;
		public StringBuilder formulas;
		public Set<String> variables;
		public Pair<String,String> exprA;
		public Pair<String,String> exprB;
		public List<String> solution;
		public LeftVarContext a;
		public RightVarContext b;
		public ExprSequenceContext exprs;
		public LeftVarContext leftVar() {
			return getRuleContext(LeftVarContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(LogarithmicParser.LPAREN, 0); }
		public RightVarContext rightVar() {
			return getRuleContext(RightVarContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(LogarithmicParser.COMMA); }
		public TerminalNode RPAREN() { return getToken(LogarithmicParser.RPAREN, 0); }
		public ExprSequenceContext exprSequence() {
			return getRuleContext(ExprSequenceContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(LogarithmicParser.WHILE, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(LogarithmicParser.COMMA, i);
		}
		public WhileSegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileSegment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).enterWhileSegment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogarithmicListener ) ((LogarithmicListener)listener).exitWhileSegment(this);
		}
	}

	public final WhileSegmentContext whileSegment() throws RecognitionException {
		WhileSegmentContext _localctx = new WhileSegmentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_whileSegment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); match(WHILE);
			setState(78); match(LPAREN);
			setState(79); ((WhileSegmentContext)_localctx).a = leftVar();
			setState(80); match(COMMA);
			setState(81); ((WhileSegmentContext)_localctx).b = rightVar();
			setState(84);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(82); match(COMMA);
				setState(83); ((WhileSegmentContext)_localctx).exprs = exprSequence();
				}
			}

